@@ -1,6 +1,7 @@
 important
 =========
 
+* (support for other encodings than utf-8)
 * testing
 * clean up code
 * code documentation
