@@ -259,7 +259,7 @@ for a song from a compilation album.
 .br
 Default: empty (no renaming)
 .
-.IPn "etxtinf = [length] "", "" [artist] "" - "" [title]"
+.IPn "extinf = [length] "", "" [artist] "" - "" [title]"
 A m3u file can contain extended information, so if a player can't
 read tags from files  or reads them only if the file is played,
 it shows (maybe) this as file information. You can use the same
